ECSCFargate/helper.tf
data "aws_vpc" "default" {
}

data "aws_subnet_ids" "getlist" {
  vpc_id = "${data.aws_vpc.default.id}"
  tags {
     Name = "*_public"
  }
}

data "aws_subnet" "snets" {
  count = "${length(data.aws_subnet_ids.getlist.ids)}"
  id = "${data.aws_subnet_ids.getlist.ids[count.index]}"
}

resource "aws_security_group" "sginline" {
  name        = "sg4alb"
  description = "Allow HTTP from Anywhere into ALB"
  vpc_id      = "${data.aws_vpc.default.id}"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8
    to_port     = 0
    protocol    = "icmp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "ecs_service" {
  vpc_id      = "${data.aws_vpc.default.id}"
  name        = "ECS-service-sg"
  description = "Allow egress from container"

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8
    to_port     = 0
    protocol    = "icmp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags {
    Name        = "ecs-service-sg"
  }
}


resource "aws_ecs_service" "app" {
  name            = "nginx"
  task_definition = "${aws_ecs_task_definition.service.family}:${max("${aws_ecs_task_definition.web.revision}", "${data.aws_ecs_task_definition.web.revision}")}"
  desired_count   = 2
  launch_type     = "FARGATE"
  cluster =       "${aws_ecs_cluster.cluster.id}"
  depends_on      = ["aws_iam_role_policy.ecs_service_role_policy"]

  network_configuration {
    security_groups = ["${var.security_groups_ids}", "${aws_security_group.ecs_service.id}"]
    subnets         = ["${var.subnets_ids}"]
  }

  load_balancer {
    target_group_arn = "${aws_alb_target_group.alb_target_group.arn}"
    container_name   = "web"
    container_port   = "80"
  }

  depends_on = ["aws_alb_target_group.alb_target_group"]
}
